--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   get: ^4.6.5
   get_cli: ^1.8.1
 
+  #QR CODE
+  qr_flutter: ^4.0.0
+  qr_code_scanner: ^1.0.1
+
   #MY PACKGAE
   coder0211: ^0.1.1
 
