--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dependencies:
   #MY PACKGAE
   coder0211: ^0.1.3
 
+  #SCREEN SHOT
+  screenshot: ^1.2.3
+
+  #SMS
+  flutter_sms: ^2.3.3
+
 dev_dependencies:
   build_runner: ^2.2.1
   mobx_codegen: ^2.0.7
