--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   #SMS
   flutter_sms: ^2.3.3
 
+  #PIN CODE
+  pin_code_fields: ^7.4.0
+
 dev_dependencies:
   build_runner: ^2.2.1
   mobx_codegen: ^2.0.7
